--- a/.github/workflows/config-files-deployment.yml
+++ b/.github/workflows/config-files-deployment.yml
@@ -24,5 +24,9 @@ jobs:
         uses: actions/checkout@v4
       - name: List files in the repository after checkout
         run: |
-          ls ${{ github.workspace }}
+          ls -al
+      - name: Run deployment script
+        run: ./nginx/nginx-config-script.sh
+      - run: |
+          echo "Config Completed"
         
