--- a/.github/workflows/config-files-deployment.yml
+++ b/.github/workflows/config-files-deployment.yml
@@ -23,10 +23,10 @@ jobs:
       #   run: whoami
       - name: Checkout code
         uses: actions/checkout@v4
-      # - name: Grant exeution privileges
-      #   run: chmod +x nginx/nginx-config-script.sh
-      # - name: Run deployment script
-      #   run: sudo ./nginx/nginx-config-script.sh
-      # - run: |
-      #     echo "Config Completed"
+      - name: Grant exeution privileges
+        run: chmod +x nginx/nginx-config-script.sh
+      - name: Run deployment script
+        run: ./nginx/nginx-config-script.sh
+      - run: |
+          echo "Config Completed"
         
